Fix: Music List Scrollbar 비활성화

--- a/src/widgets/music-app/style/music.css
+++ b/src/widgets/music-app/style/music.css
@@ -31,6 +31,10 @@
   overflow-y: scroll;
 }
 
+.music-list-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
 .music-list {
   width: 100%;
   display: flex;
